--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>project 2</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe asperiores modi corporis aliquam omnis quam quos dolores aliquid perferendis! Qui error atque laborum eum pariatur!</p>
 </body>
 </html>
